[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scene/OtherScene/BuffIcon.gd" id="1"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="2"]

[node name="BuffIcon" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
script = ExtResource( "1" )
metadata/_edit_lock_ = true

[node name="BuffBar" type="TextureProgressBar" parent="."]
modulate = Color(0.329412, 0.329412, 0.329412, 0.772549)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.0
fill_mode = 5
nine_patch_stretch = true
metadata/_edit_lock_ = true

[node name="BuffTime" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 27.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 9
horizontal_alignment = 2
vertical_alignment = 2
metadata/_edit_lock_ = true

[node name="AddTimes" type="Label" parent="."]
layout_mode = 0
offset_top = -2.0
offset_right = 37.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 12
horizontal_alignment = 2
vertical_alignment = 2
metadata/_edit_lock_ = true

[node name="BuffIconRemove" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited" flags=18]
[connection signal="timeout" from="BuffIconRemove" to="." method="_on_buff_icon_remove_timeout" flags=18]
